2010-04-07  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda.conf.5.xml: Improve strategy "skip" man.

2010-04-07  Dustin J. Mitchell <dustin@zmanda.com>
	* config/amanda/userid.m4: CHECK_USERID conditional
	* config/automake/scripts.am: add SCRIPTS_EXTRA_DIST
	* installcheck/Makefile.am: use it

2010-04-07  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: Don't exit on match_disklist error.
	* server-src/diskfile.c (match_disklist): Generate better message for
	  strategy "skip" or ignore dle.

2010-04-06  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/extract_list.c: Set restore_dir to NULL.

2010-04-06  Paul C. Mantz <pcmantz@zmanda.com>
	* ndmp-src/ndmpconnobj.c: send NDMP4_LOG_* messages to debug log
	* ndmp-src/ndma_tape.c ndmp-src/ndma_tape_simulator.c: added
	  NDMP4_LOG_* messages for testing

2010-04-05  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/extract_list.c: Fix USE-DATA-PATH offset and directory
	  property.

2010-04-05  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Changer/disk.pm: reply with 'invalid' on invalid slots
	* perl/Amanda/Taper/Scan/traditional.pm: skip invalid slots when
	  loading slot 'current'
	* installcheck/Amanda_Taper_Scan_traditional.pl: test it

2010-04-05  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/amidxtaped.pl: send changer error with MESSAGE
	* installcheck/amidxtaped.pl: test for it

2010-04-05  Dustin J. Mitchell <dustin@zmanda.com>
	* config/amanda/version.m4: be resilient to all but the first
	  digit of the version number missing

2010-04-05  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Changer.pm perl/Amanda/Changer/robot.pm: clean up
	  reference loop in %subs (interim solution -- this arrangement
	  leaks everywhere)

2010-04-05  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Changer/ndmp.pm: close the NDMP connection after
	  every Interface operation, so that objects are not unreffed