@@ -1,3 +1,10 @@
+2010-04-07  Paul C. Mantz <pcmantz@zmanda.com>
+	* server-src/amreport.pl perl/Amanda/Report.pm
+	perl/Amanda/Report/human.pm perl/Amanda/Report/postscript.pm
+	perl/Amanda/Report/xml.pm installcheck/amreport.pl
+	installcheck/Amanda_Report.pl: taped segments called parts, not chunks
+
+
 2010-04-07  Jean-Louis Martineau <martineau@zmanda.com>
 	* man/xml-source/amanda.conf.5.xml: Improve strategy "skip" man.
 
